# PlantLab

./: .gitignore  LICENSE  README.md  config.json
backend/: pyproject.toml
backend/src/plantlab/: app.py
backend/src/plantlab/routes/: sensors.py
backend/src/plantlab/services/: fake_data.py
backend/static/: index.html  manifest.webmanifest  pot.html
backend/tests/: test_health.py
